<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="40dp"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/signuplogoimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/testlogo"
        android:layout_marginBottom="24dp" >

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" >

    </TextView>

    <EditText
        android:id="@+id/etsignupname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/full_name"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp" >

    </EditText>


    <EditText
        android:id="@+id/etsignupemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" >

    </EditText>


    <EditText
        android:id="@+id/etsignuppass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" >

    </EditText>


    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="16dp" >

    </Button>


    <TextView
       android:id="@+id/tvlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/blue"
        android:textSize="14sp" >

    </TextView>



</LinearLayout>