<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginHorizontal="40dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/testlogo"
        android:layout_marginBottom="24dp" >
    </ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_app"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#222222"
        android:layout_marginBottom="24dp" >

    </TextView>


    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" >

    </EditText>


    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" >

    </EditText>


    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="16dp" >

    </Button>

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/blue"
        android:textSize="14sp" />

</LinearLayout>