<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/purple2"
    tools:context=".ProfileFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/idLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile_icon" >

        </ImageView>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileCard"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" >

    </TextView>


    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilename"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/bio"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:inputType="textMultiLine">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/ll"
        >

        <Button
            android:id="@+id/logoutbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/logout"
            android:textColor="@color/purple2"
            android:textStyle="bold"
            android:layout_marginHorizontal="6dp">

        </Button>

        <Button
           android:id="@+id/editpfbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/edit_profile"
            android:textColor="@color/purple2"
            android:layout_marginHorizontal="6dp"
            android:textStyle="bold" >

        </Button>

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profilerv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll"
        android:layout_marginTop="16dp"
        android:padding="8dp" >

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>